--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,12 @@
     </dependencies>
      <build>
         <plugins>
+		<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-clean-plugin</artifactId>
+    <version>3.1.0</version> <!-- or latest stable -->
+</plugin>
+
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
